@@ -1,7 +1,9 @@
 NDC-XBMC
 --------
 
-This plugin allows you to view the 2012 NDC session videos from within XBMC.
+This plugin allows you to view the 2012 and 2013 NDC session videos from within XBMC.
+
+This plugin does require the Beautfil Soup module to be installed.  This can be downloaded from http://ftp.heanet.ie/mirrors/xbmc/addons/dharma-pre/script.module.beautifulsoup/ and installed using the "Install from ZIP file" option (under System -> Settings -> Add-ons).
 
 INSTALLATION
 ------------
